[project]
name = "entrance-exam-analyzer"
version = "0.1.0"
description = "合格実績集計ファイル 自動分析Webアプリ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
]

[tool.uv]
package = false
